--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1"
+    "object-path": ">=0.11.5"
+    "node-forge": ">=0.10.0"
+    "http-proxy": ">=1.18.1"
+    "serialize-javascript": ">=3.1.0"
+    "websocket-extensions": ">=0.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
